[tool.poetry]
name = "returns"
version = "0.1.0"
description = ""
authors = ["William <wosteimer1@gmail.com>"]
readme = "README.md"
packages = [{include = "returns", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
