[tool.poetry]
name = "returns"
version = "0.1.0"
description = ""
authors = ["William <wosteimer1@gmail.com>"]
readme = "README.md"
packages = [{include = "returns", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-sugar = "^0.9.7"
pytest-watch = "^4.2.0"
black = "^23.12.1"
isort = "^5.13.2"
pyright = "^1.1.344"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
