[project]
name = "returns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-sugar>=1.0.0",
    "pytest-watch>=4.2.0",
]

